syntax = "proto3";

package calculator;

message Values {
	int32 x = 1;
	int32 y = 2;
}

message CalculatorRequest {
	Values values = 1;
}

message CalculatorResponse {
	int32 result = 1;
}

service CalculatorService {
	rpc Sum (CalculatorRequest) returns (CalculatorResponse) {}
}